# MLB-at-bat

./: .env.example  .gitignore  CLAUDE.md  README.md  ab_testing.py  backtest.py  baseball-bot.service  bot.py  config.py  data_fetchers.py  deploy.sh  drift.py  export_tableau.py  formatters.py  lineup_detector.py  matchup_data.py  odds_api.py  predictor.py  predictor_shadow.py  predictor_v4.py  pyproject.toml  requirements.txt  statcast_cache.py  stats.py  tracker.py  umpire.py  walk_forward.py  weather.py
.claude/: settings.json
.claude/agents/: deploy-guardian.md  model-analyst.md  odds-analyst.md  pipeline-monitor.md  test-engineer.md
.claude/commands/: audit.md  backtest.md  deploy-check.md  model-health.md  shadow-compare.md  stats.md
.github/workflows/: ci.yml  statcast-cache.yml
tests/: test_ab_testing.py  test_drift.py  test_odds.py  test_predictor.py  test_tracker.py
