[project]
name = "baseball-bot"
version = "1.0.0"
description = "MLB hit prediction bot with real-time Telegram alerts, odds comparison, and paper betting"
requires-python = ">=3.11"
authors = [{ name = "Dylan" }]
dependencies = [
    "python-telegram-bot==21.5",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
baseball-bot = "bot:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
